--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,57 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-12 12:57:04 -0400 
+%% Created for Pete Su at 2023-08-12 13:04:17 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Maldacena2003,
+	author = {Juan Maldacena},
+	date-added = {2023-08-12 13:04:06 -0400},
+	date-modified = {2023-08-12 13:04:10 -0400},
+	doi = {10.1088/1126-6708/2003/04/021},
+	journal = {J. High Energy Phys.},
+	note = {\href{http://arxiv.org/abs/hep-th/0106112v6}{arxiv:hep-th/0106112v6}},
+	number = {04},
+	pages = {021--021},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {Eternal black holes in anti-de Sitter},
+	url = {https://doi.org/10.1088%2F1126-6708%2F2003%2F04%2F021},
+	volume = {2003},
+	year = 2003,
+	bdsk-url-1 = {https://doi.org/10.1088%2F1126-6708%2F2003%2F04%2F021},
+	bdsk-url-2 = {https://doi.org/10.1088/1126-6708/2003/04/021}}
+
+@article{Mack2019,
+	author = {Katherine J. Mack and Robert McNees},
+	date-added = {2023-08-12 13:02:58 -0400},
+	date-modified = {2023-08-12 13:03:03 -0400},
+	doi = {10.1103/physrevd.99.063001},
+	journal = {Phys. Rev. D},
+	note = {\href{http://arxiv.org/abs/1809.05089v2}{arxiv:1809.05089v2}},
+	number = {6},
+	publisher = {American Physical Society ({APS})},
+	title = {Bounds on extra dimensions from micro black holes in the context of the metastable Higgs vacuum},
+	url = {https://doi.org/10.1103%2Fphysrevd.99.063001},
+	volume = {99},
+	year = 2019,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.99.063001},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.99.063001}}
+
+@book{Lust2019,
+	author = {Dieter L{\"u}st and Ward Vleeshouwers},
+	date-added = {2023-08-12 13:02:19 -0400},
+	date-modified = {2023-08-12 13:02:27 -0400},
+	doi = {10.1007/978-3-030-10919-6},
+	publisher = {Springer International Publishing},
+	title = {Black Hole Information and Thermodynamics},
+	url = {https://doi.org/10.1007%2F978-3-030-10919-6},
+	year = 2019,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-030-10919-6},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-030-10919-6}}
 
 @article{Lloyd2014,
 	author = {Seth Lloyd and John Preskill},
@@ -9247,18 +9292,6 @@ horizon.},
 	volume = {2015},
 	year = {2015},
 	bdsk-url-1 = {https://doi.org/10.1007/JHEP08(2015)114}}
-
-@article{Mack2018,
-	author = {Mack, Katherine J. and McNees, Robert},
-	date-added = {2019-02-15 14:36:36 +0000},
-	date-modified = {2023-08-10 07:07:40 -0400},
-	eprint = {1809.05089},
-	journal = {arXiv},
-	note = {\href{https://arxiv.org/abs/1809.05089}{arxiv:1809.05089}},
-	primaryclass = {hep-ph},
-	slaccitation = {%%CITATION = ARXIV:1809.05089;%%},
-	title = {{Bounds on extra dimensions from micro black holes in the context of the metastable Higgs vacuum}},
-	year = {2018}}
 
 @article{Witten:2018lha,
 	archiveprefix = {arXiv},
