--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-12 13:04:17 -0400 
+%% Created for Pete Su at 2023-08-12 13:31:45 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Maldacena1997,
+	author = {Juan Maldacena},
+	date-added = {2023-08-12 13:29:29 -0400},
+	date-modified = {2023-08-12 13:30:30 -0400},
+	doi = {10.1023/a:1026654312961},
+	journal = {International Journal of Theoretical Physics},
+	note = {\href{http://arxiv.org/abs/hep-th/9711200v3}{arxiv:hep-th/9711200v3}},
+	number = {4},
+	pages = {1113--1133},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {{The Large-N Limit of Superconformal Field Theories and Supergravity}},
+	url = {https://doi.org/10.1023%2Fa%3A1026654312961},
+	volume = {38},
+	year = 1999,
+	bdsk-url-1 = {https://doi.org/10.1023%2Fa%3A1026654312961},
+	bdsk-url-2 = {https://doi.org/10.1023/a:1026654312961}}
 
 @article{Maldacena2003,
 	author = {Juan Maldacena},
@@ -3601,10 +3618,10 @@
 	volume = {31},
 	year = {2005}}
 
-@book{Marchildon_2002,
+@book{Marchildon2002,
 	author = {Louis Marchildon},
 	date-added = {2023-07-28 09:03:05 -0400},
-	date-modified = {2023-07-28 09:03:05 -0400},
+	date-modified = {2023-08-12 13:31:43 -0400},
 	doi = {10.1007/978-3-662-04750-7},
 	publisher = {Springer Berlin Heidelberg},
 	title = {Quantum Mechanics},
@@ -6734,29 +6751,11 @@
 	year = {2016},
 	bdsk-url-1 = {https://doi.org/10.1007/s10701-016-0037-4}}
 
-@article{Maldacena:1997re,
-	archiveprefix = {arXiv},
-	author = {Maldacena, Juan Martin},
-	date-added = {2019-11-22 08:34:32 -0500},
-	date-modified = {2019-11-22 08:34:32 -0500},
-	doi = {10.1023/A:1026654312961, 10.4310/ATMP.1998.v2.n2.a1},
-	eprint = {hep-th/9711200},
-	journal = {Int. J. Theor. Phys.},
-	note = {[Adv. Theor. Math. Phys.2,231(1998)]},
-	pages = {1113-1133},
-	primaryclass = {hep-th},
-	reportnumber = {HUTP-97-A097, HUTP-98-A097},
-	slaccitation = {%%CITATION = HEP-TH/9711200;%%},
-	title = {{The Large N limit of superconformal field theories and supergravity}},
-	volume = {38},
-	year = {1999},
-	bdsk-url-1 = {https://doi.org/10.1023/A:1026654312961,%2010.4310/ATMP.1998.v2.n2.a1}}
-
-@article{Maldacena:1999ti,
+@article{Maldacena1999a,
 	archiveprefix = {arXiv},
 	author = {Aharony, Ofer and Gubser, Steven S. and Maldacena, Juan Martin and Ooguri, Hirosi and Oz, Yaron},
 	date-added = {2019-11-22 08:31:19 -0500},
-	date-modified = {2019-11-22 08:31:30 -0500},
+	date-modified = {2023-08-12 13:28:25 -0400},
 	doi = {10.1016/S0370-1573(99)00083-6},
 	eprint = {hep-th/9905111},
 	journal = {Phys. Rept.},
@@ -8790,11 +8789,11 @@
 	year = {2014},
 	bdsk-url-1 = {https://doi.org/10.1016/j.shpsb.2014.03.002}}
 
-@article{Marolf:2017jkr,
+@article{Marolf2017,
 	archiveprefix = {arXiv},
 	author = {Marolf, Donald},
 	date-added = {2019-03-04 07:33:52 -0500},
-	date-modified = {2019-03-04 07:34:26 -0500},
+	date-modified = {2023-08-12 13:31:31 -0400},
 	doi = {10.1088/1361-6633/aa77cc},
 	eprint = {1703.02143},
 	journal = {Rept. Prog. Phys.},
@@ -8808,11 +8807,11 @@
 	year = {2017},
 	bdsk-url-1 = {https://doi.org/10.1088/1361-6633/aa77cc}}
 
-@article{Marolf:2008mf,
+@article{Marolf2009,
 	archiveprefix = {arXiv},
 	author = {Marolf, Donald},
 	date-added = {2019-03-04 07:28:40 -0500},
-	date-modified = {2019-03-04 07:29:12 -0500},
+	date-modified = {2023-08-12 13:31:23 -0400},
 	doi = {10.1103/PhysRevD.79.044010},
 	eprint = {0808.2842},
 	journal = {Phys. Rev.},
