fix hyperref font problem

--- a/0904.0815/Tpl_info.tex
+++ b/0904.0815/Tpl_info.tex
@@ -1,6 +1,6 @@
 %---------------------------------------------------------------------------------------------------------------------------
-\documentclass[12pt]{article}
-%\documentclass[prd,groupedaddress, showpacs, showkeys, onecolumn, nofootinbib, 12pt]{revtex4}
+%\documentclass[12pt]{article}
+\documentclass[prd,groupedaddress, showpacs, showkeys, onecolumn, nofootinbib, 12pt]{revtex4-2}
 
 %---------------------------------------------------------------------------------------------------------------------------
 \usepackage{amsfonts, amssymb, amsmath, amsthm, amscd}
@@ -34,10 +34,6 @@
 %\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 %\pdfbookmark[1]{Introduction}{Introduction}
 
-\usepackage[small]{titlesec}
-\titlelabel{\thetitle.\quad}
-
-\usepackage{cite}
 \usepackage{microtype}
 
 \usepackage{bm}
@@ -65,22 +61,22 @@ bookmarksopenlevel=10
 
 \begin{document} %revtex
 %----------------------------------------------------------------
-\title{\Large Linking the trans-Planckian and information loss problems in black hole physics}
+\title{Linking the trans-Planckian and information loss problems in black hole physics}
 %-------------------------------------------------------------------------
-\author{\large Stefano Liberati \\ Lorenzo Sindoni \\ Sebastiano Sonego}
-%\email{\tt liberati@sissa.it}
+\author{Stefano Liberati}
+\email{liberati@sissa.it}
 %-------------------------------------------------------------------------
-%\affiliation{SISSA, Via Beirut 2-4, 34014 Trieste, Italy and INFN sezione di Trieste}
+\affiliation{SISSA, Via Beirut 2-4, 34014 Trieste, Italy and INFN sezione di Trieste}
 %-------------------------------------------------------------------------
-%\author{Lorenzo Sindoni}
-%\email{\tt sindoni@sissa.it}
+\author{Lorenzo Sindoni}
+\email{sindoni@sissa.it}
 %-------------------------------------------------------------------------
-%\affiliation{SISSA, Via Beirut 2-4, 34014 Trieste, Italy and INFN sezione di Trieste}
+\affiliation{SISSA, Via Beirut 2-4, 34014 Trieste, Italy and INFN sezione di Trieste}
 %-------------------------------------------------------------------------
-%\author{Sebastiano Sonego}
-%\email{\tt sebastiano.sonego@uniud.it}
+\author{Sebastiano Sonego}
+\email{sebastiano.sonego@uniud.it}
 %-------------------------------------------------------------------------
-%\affiliation{Universit\`a degli Studi di Udine, Via delle Scienze 208, 33100 Udine, Italy}
+\affiliation{Universit\`a degli Studi di Udine, Via delle Scienze 208, 33100 Udine, Italy}
 %-------------------------------------------------------------------------
 \date{July 25, 2009}
 %-------------------------------------------------------------------------
@@ -108,7 +104,10 @@ bookmarksopenlevel=10
 \def\implies{{\Rightarrow}}
 %----------------------------------------------------------------
 %-------------------------------------------------------------------------
-\maketitle
+%-------------------------------------------------------------------------
+\pacs{04.70.Dy; 04.62.+v; 04.60.-m}
+%-------------------------------------------------------------------------
+\keywords{Trans-Planckian problem; information loss; Hawking radiation; Hawking effect; black hole evaporation}
 
 \begin{abstract}
 %-------------------------------------------------------------------------
@@ -118,6 +117,9 @@ The trans-Planckian and information loss problems are usually discussed in the l
 
 %-------------------------------------------------------------------------
 \end{abstract}
+
+\maketitle
+
 
 \newpage
 
