--- a/1801.05923/main.tex
+++ b/1801.05923/main.tex
@@ -20,7 +20,34 @@
 \renewcommand\subsection{\@startsection{subsection}{2}{\z@}{-3.25ex plus -1ex minus -.2ex}{1.5ex plus .2ex}{\normalsize\bf}}
 \renewcommand\subsubsection{\@startsection{subsubsection}{3}{\z@}{-3.25ex plus -1ex minus -.2ex}{1.5ex plus .2ex}{\normalsize\bf}}
 \makeatother
+\usepackage[noBBpl,sc]{mathpazo}
+\geometry{papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
 \newtheorem{thm}{Theorem}
 \newtheorem{cor}[thm]{Corollary}
 \newtheorem{lem}[thm]{Lemma}
@@ -48,6 +75,7 @@
 
 
 \begin{document}
+\date{19 Apr 2018}
 \begin{frontmatter}
 \title{(Information) Paradox Regained? \\ A Brief Comment on Maudlin on Black Hole Information Loss}
 \author{JB Manchak}\ead{jmanchak@uci.edu}
@@ -100,7 +128,7 @@ We make the notion of an evaporation spacetime precise as follows.  First, we ne
 
 
 \begin{figure}[h]    \centering
-   \includegraphics[width=6in]{BHE_Penrose_Diagram2+3.pdf}
+   \includegraphics[width=5in]{BHE_Penrose_Diagram2+3.pdf}
    \caption{\label{PenroseBHE2} The same spacetime as represented in Fig. \ref{PenroseBHE1}.  In (a), closed achronal sets $\Sigma_1$ and $\Sigma_2$ are depicted.  Here $\Sigma_1$ is connected and $\Sigma_2$ is edgeless.  The point $p$ is such that $p\in D^+(\Sigma_1)$ and $p\not\in J^-(\Sigma_2)\cup J^+(\Sigma_2)$.  In (b), the sets $K=\Sigma_1-D^-(\Sigma_2)\cap \Sigma_1$ and $J^+(K)\cap\Sigma_2$ are labeled.}
 \end{figure}
 
@@ -130,7 +158,7 @@ Maudlin, however, does not reject either of the premises: he apparently maintain
 
 \begin{figure}[h]    \centering
    \includegraphics[width=3in]{BHE_Penrose_Diagram_--_Maudlin.pdf}
-   \caption{\label{MaudlinFig}}
+   \caption{\label{MaudlinFig} In Maudlin’s model of an evaporation spacetime, one adds an “evaporation event” to the spacetime depicted in Fig. 2. Maudlin then argues that would-be Cauchy surfaces “below” the evaporation event (such as 1) are connected, and ones “above” the evaporation event are disconnected, with portions lying within and portions lying outside the event horizon. For instance, $\Sigma_{2in}\cup\Sigma_{2out}$ is taken to be a Cauchy surface. $\Sigma_{\mathit{crit}}$ is the “critical” surface after which Cauchy surfaces are disconnected.}
 \end{figure}
 
 Of course, the ``solution'' just sketched cannot be the whole story, because it is flatly inconsistent with the Kodama-Wald theorem.  After all, that theorem says that evaporation spacetimes cannot be globally hyperbolic; thus, $\Sigma_{2in}\cup\Sigma_{2out}$ is no more a Cauchy surface than $\Sigma_2$ was (or $\Sigma_1$ is).  Maudlin does not address this point---but he does address an inconsistency between his solution and another theorem, and his remarks there suggest what is really going on.  He writes (in connection with the Geroch splitting theorem \citep{GerochSplitting}),
@@ -197,8 +225,8 @@ One direct consequence of the lemma is the following: For all spacetimes $(M,g_{
 
 Essentially, the proposition is one way of expressesing the idea that standard globally hyperbolic spacetimes are so causally well-behaved that no ``holes'' can be there. Now let us return to Maudlin's model with the ``evaporation event'' in place. Referring to the Penrose diagram and choosing any point $p$ on the event horizon, one finds that the above proposition comes out as false; the timelike future of the point is confined to the region inside the event horizon while the causal future of the point extends out past the ``evaporation event'' and reaches future null infinity. Given that the proposition fails on Maudlin's model, it would seems that the model's causal structure differs significantly from the causal structure of the standard globally hyperbolic spacetimes;  ``holes'' are permitted in this new context after all. What is more, it seems that these differences are rooted in the fact that that Maudlin's model has a causal structure unlike {\em any} standard relativistic spacetime. To see this, note that even the lemma fails on Maudlin's model (see Fig. \ref{CausCon}).
 
-\begin{figure}[h]    \centering
-   \includegraphics[width=7in]{ManchakBH3.pdf}
+\begin{figure}[h]
+\center{\includegraphics[width=6in]{ManchakBH3.pdf}}
    \caption{\label{CausCon} The Penrose diagram of Maudlin's model. We see that the model has a causal structure quite different from any standard spacetime since $q \in J^+(p)$ and $r \in I^+(q)$ but $r \notin I^+(p)$. Moreover, the model fails to be causally continuous since $I^-(p) \subseteq I^-(q)$ but $I^+(q) \nsubseteq I^+(p)$.  }
 \end{figure}
 
