--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,97 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-13 08:22:28 -0400 
+%% Created for Pete Su at 2023-08-13 09:20:00 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Mathur2009,
+	author = {Samir D Mathur},
+	date-added = {2023-08-13 09:19:52 -0400},
+	date-modified = {2023-08-13 09:19:54 -0400},
+	doi = {10.1088/0264-9381/26/22/224001},
+	journal = {Class. Quantum Grav.},
+	note = {\href{http://arxiv.org/abs/0909.1038v2}{arxiv:0909.1038v2}},
+	number = {22},
+	pages = {224001},
+	publisher = {{IOP} Publishing},
+	title = {The information paradox: a pedagogical introduction},
+	url = {https://doi.org/10.1088%2F0264-9381%2F26%2F22%2F224001},
+	volume = {26},
+	year = 2009,
+	bdsk-url-1 = {https://doi.org/10.1088%2F0264-9381%2F26%2F22%2F224001},
+	bdsk-url-2 = {https://doi.org/10.1088/0264-9381/26/22/224001}}
+
+@article{Mathur2011,
+	author = {Samir D. Mathur and Christopher J. Plumberg},
+	date-added = {2023-08-13 09:19:31 -0400},
+	date-modified = {2023-08-13 09:19:35 -0400},
+	doi = {10.1007/jhep09(2011)093},
+	journal = {J. High Energ. Phys.},
+	note = {\href{http://arxiv.org/abs/1101.4899v3}{arxiv:1101.4899v3}},
+	number = {9},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {Correlations in Hawking radiation and the infall problem},
+	url = {https://doi.org/10.1007%2Fjhep09%282011%29093},
+	volume = {2011},
+	year = 2011,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fjhep09%282011%29093},
+	bdsk-url-2 = {https://doi.org/10.1007/jhep09(2011)093}}
+
+@article{Marolf2021,
+	author = {Donald Marolf and Henry Maxfield},
+	date-added = {2023-08-13 09:17:30 -0400},
+	date-modified = {2023-08-13 09:17:32 -0400},
+	doi = {10.1007/jhep04(2021)272},
+	journal = {J. High Energ. Phys.},
+	note = {\href{http://arxiv.org/abs/2010.06602v1}{arxiv:2010.06602v1}},
+	number = {4},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {Observations of Hawking radiation: the Page curve and baby universes},
+	url = {https://doi.org/10.1007%2Fjhep04%282021%29272},
+	volume = {2021},
+	year = 2021,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fjhep04%282021%29272},
+	bdsk-url-2 = {https://doi.org/10.1007/jhep04(2021)272}}
+
+@book{Marolf2005,
+	author = {Gomberoff, Andr{\'e}s and Marolf, Donald},
+	date-added = {2023-08-13 09:16:52 -0400},
+	date-modified = {2023-08-13 09:17:02 -0400},
+	publisher = {Springer Science \& Business Media},
+	title = {Lectures on quantum gravity},
+	year = {2005}}
+
+@book{Mann2015,
+	author = {Robert B. Mann},
+	date-added = {2023-08-13 09:16:11 -0400},
+	date-modified = {2023-08-13 09:16:12 -0400},
+	doi = {10.1007/978-3-319-14496-2},
+	publisher = {Springer International Publishing},
+	title = {Black Holes: Thermodynamics, Information, and Firewalls},
+	url = {https://doi.org/10.1007%2F978-3-319-14496-2},
+	year = 2015,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-319-14496-2},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-319-14496-2}}
+
+@article{Manikandan2017,
+	author = {Sreenath K. Manikandan and Andrew N. Jordan},
+	date-added = {2023-08-13 09:04:45 -0400},
+	date-modified = {2023-08-13 09:04:47 -0400},
+	doi = {10.1103/physrevd.96.124011},
+	journal = {Phys. Rev. D},
+	note = {\href{http://arxiv.org/abs/1709.06154v1}{arxiv:1709.06154v1}},
+	number = {12},
+	publisher = {American Physical Society ({APS})},
+	title = {Andreev reflections and the quantum physics of black holes},
+	url = {https://doi.org/10.1103%2Fphysrevd.96.124011},
+	volume = {96},
+	year = 2017,
+	bdsk-url-1 = {https://doi.org/10.1103%2Fphysrevd.96.124011},
+	bdsk-url-2 = {https://doi.org/10.1103/physrevd.96.124011}}
 
 @article{Manchak2018,
 	author = {J. B. Manchak and James Owen Weatherall},
