--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,59 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-13 09:20:00 -0400 
+%% Created for Pete Su at 2023-08-13 12:08:32 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Modesto2014,
+	author = {Emanuele Alesci and Leonardo Modesto},
+	date-added = {2023-08-13 12:03:53 -0400},
+	date-modified = {2023-08-13 12:04:06 -0400},
+	doi = {10.1007/s10714-013-1656-0},
+	journal = {Gen Relativ Gravit},
+	number = {2},
+	publisher = {Springer Science and Business Media {LLC}},
+	title = {Particle creation by loop black holes},
+	url = {https://doi.org/10.1007%2Fs10714-013-1656-0},
+	volume = {46},
+	year = 2014,
+	bdsk-url-1 = {https://doi.org/10.1007%2Fs10714-013-1656-0},
+	bdsk-url-2 = {https://doi.org/10.1007/s10714-013-1656-0}}
+
+@article{Michel2016,
+	author = {Michel, Ben},
+	date-added = {2023-08-13 11:58:42 -0400},
+	date-modified = {2023-08-13 11:59:34 -0400},
+	journal = {arXiv preprint},
+	note = {\href{https://arxiv.org/abs/1612.03158}{arxiv:1612.03158}},
+	title = {Remarks on Rindler quantization},
+	year = {2016}}
+
+@article{Maudlin2017,
+	author = {Maudlin, Tim},
+	date-added = {2023-08-13 11:56:40 -0400},
+	date-modified = {2023-08-13 11:57:34 -0400},
+	journal = {arXiv preprint},
+	note = {\href{https://arxiv.org/abs/1705.03541v1}{arxiv:1705.03541v1}},
+	title = {{(Information) Paradox Lost}},
+	year = {2017}}
+
+@incollection{Mathur2009a,
+	author = {S.D. Mathur},
+	booktitle = {Physics of Black Holes},
+	date-added = {2023-08-13 11:55:08 -0400},
+	date-modified = {2023-08-13 11:55:32 -0400},
+	doi = {10.1007/978-3-540-88460-6_1},
+	pages = {3--48},
+	publisher = {Springer Berlin Heidelberg},
+	title = {What Exactly is the Information Paradox?},
+	url = {https://doi.org/10.1007%2F978-3-540-88460-6_1},
+	year = {2009},
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-540-88460-6_1},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-540-88460-6_1}}
 
 @article{Mathur2009,
 	author = {Samir D Mathur},
@@ -5729,13 +5776,16 @@
 	bdsk-url-1 = {https://doi.org/10.1093%2Fbjps%2F41.3.351},
 	bdsk-url-2 = {https://doi.org/10.1093/bjps/41.3.351}}
 
-@book{MacLane2012,
+@book{MacLane1995,
 	author = {{Mac Lane}, Saunders},
 	date-added = {2023-07-18 07:16:36 -0400},
-	date-modified = {2023-07-18 07:17:08 -0400},
+	date-modified = {2023-08-13 11:48:21 -0400},
+	doi = {10.1007/978-3-642-62029-4},
+	note = {4th printing.},
 	publisher = {Springer},
 	title = {Homology},
-	year = {2012}}
+	url = {https://doi.org/10.1007%2F978-3-642-62029-4},
+	year = {1995}}
 
 @book{MacLane_1994,
 	author = {Saunders Mac Lane and Ieke Moerdijk},
@@ -6861,11 +6911,11 @@
 	bdsk-url-1 = {http://www.sciencedirect.com/science/article/pii/0550321374901540},
 	bdsk-url-2 = {https://doi.org/10.1016/0550-3213(74)90154-0}}
 
-@article{Moshe:2003xn,
+@article{Moshe2003,
 	archiveprefix = {arXiv},
 	author = {Moshe, Moshe and Zinn-Justin, Jean},
 	date-added = {2019-11-28 08:14:40 -0500},
-	date-modified = {2019-11-28 08:15:23 -0500},
+	date-modified = {2023-08-13 12:08:22 -0400},
 	doi = {10.1016/S0370-1573(03)00263-1},
 	eprint = {hep-th/0306133},
 	journal = {Phys. Rept.},
@@ -6947,11 +6997,11 @@
 	year = {2013},
 	bdsk-url-1 = {https://doi.org/10.1088/1475-7516/2013/09/028}}
 
-@article{Morrison:2014jha,
+@article{Morrison2014,
 	archiveprefix = {arXiv},
 	author = {Morrison, Ian A.},
 	date-added = {2019-11-21 07:56:04 -0500},
-	date-modified = {2019-11-21 07:56:33 -0500},
+	date-modified = {2023-08-13 12:06:02 -0400},
 	doi = {10.1007/JHEP05(2014)053},
 	eprint = {1403.3426},
 	journal = {JHEP},
