--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,55 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-13 12:24:09 -0400 
+%% Created for Pete Su at 2023-08-13 13:20:26 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Natario2005,
+	archiveprefix = {arXiv},
+	author = {Natario, Jose},
+	date-added = {2023-08-13 13:19:44 -0400},
+	date-modified = {2023-08-13 13:20:10 -0400},
+	eprint = {math/0603190},
+	journal = {Resenhas},
+	note = {\href{https://arxiv.org/abs/math/0603190v5}{arxiv:math/0603190v5}},
+	pages = {309--335},
+	title = {{Relativity and singularities: A Short introduction for mathematicians}},
+	volume = {6},
+	year = {2005}}
+
+@book{Nastase2015,
+	author = {Nastase, Horatiu},
+	date-added = {2023-08-13 13:17:23 -0400},
+	date-modified = {2023-08-13 13:18:27 -0400},
+	publisher = {Cambridge University Press},
+	title = {Introduction to the ADS/CFT Correspondence},
+	year = {2015}}
+
+@book{Mukhanov2007,
+	author = {Mukhanov, Viatcheslav and Winitzki, Sergei},
+	date-added = {2023-08-13 13:16:25 -0400},
+	date-modified = {2023-08-13 13:16:28 -0400},
+	publisher = {Cambridge university press},
+	title = {Introduction to quantum effects in gravity},
+	year = {2007}}
+
+@incollection{Moschella2006,
+	author = {Ugo Moschella},
+	booktitle = {Einstein, 1905{\textendash}2005},
+	date-added = {2023-08-13 13:11:17 -0400},
+	date-modified = {2023-08-13 13:11:25 -0400},
+	doi = {10.1007/3-7643-7436-5_4},
+	pages = {120--133},
+	publisher = {Birkh{\"a}user Basel},
+	title = {The de Sitter and anti-de Sitter Sightseeing Tour},
+	url = {https://doi.org/10.1007%2F3-7643-7436-5_4},
+	year = 2006,
+	bdsk-url-1 = {https://doi.org/10.1007%2F3-7643-7436-5_4},
+	bdsk-url-2 = {https://doi.org/10.1007/3-7643-7436-5_4}}
 
 @misc{Miller2018a,
 	author = {Miller, Noah},
@@ -468,10 +511,10 @@
 	title = {Entanglement in the vacuum and the firewall paradox},
 	year = {2016}}
 
-@article{Kattemlle2017,
+@article{Kattemolle2017,
 	author = {Joris Kattem\"olle and Ben Freivogel},
 	date-added = {2023-08-12 07:26:08 -0400},
-	date-modified = {2023-08-12 07:26:33 -0400},
+	date-modified = {2023-08-13 12:42:15 -0400},
 	doi = {10.1007/jhep10(2017)092},
 	journal = {J. High Energ. Phys.},
 	note = {\href{http://arxiv.org/abs/1707.04954v3}{arxiv:1707.04954v3}},
