--- a/1801.05923/main.tex
+++ b/1801.05923/main.tex
@@ -158,7 +158,7 @@ Maudlin, however, does not reject either of the premises: he apparently maintain
 
 \begin{figure}[h]    \centering
    \includegraphics[width=3in]{BHE_Penrose_Diagram_--_Maudlin.pdf}
-   \caption{\label{MaudlinFig} In Maudlin’s model of an evaporation spacetime, one adds an “evaporation event” to the spacetime depicted in Fig. 2. Maudlin then argues that would-be Cauchy surfaces “below” the evaporation event (such as 1) are connected, and ones “above” the evaporation event are disconnected, with portions lying within and portions lying outside the event horizon. For instance, $\Sigma_{2in}\cup\Sigma_{2out}$ is taken to be a Cauchy surface. $\Sigma_{\mathit{crit}}$ is the “critical” surface after which Cauchy surfaces are disconnected.}
+   \caption{\label{MaudlinFig} In Maudlin’s model of an evaporation spacetime, one adds an “evaporation event” to the spacetime depicted in Fig. 2. Maudlin then argues that would-be Cauchy surfaces “below” the evaporation event (such as $\Sigma_1$) are connected, and ones “above” the evaporation event are disconnected, with portions lying within and portions lying outside the event horizon. For instance, $\Sigma_{2in}\cup\Sigma_{2out}$ is taken to be a Cauchy surface. $\Sigma_{\mathit{crit}}$ is the “critical” surface after which Cauchy surfaces are disconnected.}
 \end{figure}
 
 Of course, the ``solution'' just sketched cannot be the whole story, because it is flatly inconsistent with the Kodama-Wald theorem.  After all, that theorem says that evaporation spacetimes cannot be globally hyperbolic; thus, $\Sigma_{2in}\cup\Sigma_{2out}$ is no more a Cauchy surface than $\Sigma_2$ was (or $\Sigma_1$ is).  Maudlin does not address this point---but he does address an inconsistency between his solution and another theorem, and his remarks there suggest what is really going on.  He writes (in connection with the Geroch splitting theorem \citep{GerochSplitting}),
