--- a/gr-qc-0608018/0608018v1.tex
+++ b/gr-qc-0608018/0608018v1.tex
@@ -24,7 +24,7 @@ bookmarksopenlevel=10
 }
 
 \usepackage[noBBpl,sc]{mathpazo}
-\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
 \raggedbottom
