--- a/gr-qc-9707012/ch7-BH.tex
+++ b/gr-qc-9707012/ch7-BH.tex
@@ -291,7 +291,7 @@ so
 \qquad \mbox{near $\mcH^+$}
 \ee
 This oscillates increasingly rapidly as $\epsilon\to 0$, so 
-\emph{the geometric optics approximation is justified at late times}. \\
+\emph{the geometric optics approximation is justified at late times}.
 
 We need to match $\Phi_{\omega}$ onto a solution of the K-G equation 
 near $\scri^-$.  In the geometric optics approximation we just
