--- a/gr-qc-9707012/BH.tex
+++ b/gr-qc-9707012/BH.tex
@@ -1,4 +1,30 @@
-\documentclass[fleqn,11pt]{report}
+\documentclass[fleqn,12pt]{report}
+\usepackage[noBBpl,sc]{mathpazo}
+
+\linespread{1.05}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,pagecolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[papersize={7.1in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+\input{../helpers/cmrsum}
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
 \usepackage{pictex}
 \usepackage{makeidx}
 \usepackage{amsfonts}
