--- a/helpers/fixarxiv-palatino-mathpazo.tex
+++ b/helpers/fixarxiv-palatino-mathpazo.tex
@@ -11,7 +11,7 @@
 \input{../helpers/fix-underbrace.tex}
 
 \usepackage[small]{titlesec}
-%\titlelabel{\thetitle.\quad}
+\titlelabel{\thetitle.\quad}
 
 \usepackage{cite}
 \usepackage{microtype}
