--- a/0710.4345/PRIMER07.tex
+++ b/0710.4345/PRIMER07.tex
@@ -3,7 +3,33 @@
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+\usepackage{latexsym}
+\usepackage{graphicx}
+\usepackage{epsf}
+
+\usepackage{chngcntr} 
+\counterwithin{figure}{chapter} 
+% hyperref last because otherwise some things go wrong.
 \usepackage[colorlinks=true
+,breaklinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
 ,citecolor=blue
@@ -16,24 +42,19 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage[noBBpl,sc]{mathpazo}
-\linespread{1.1}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
-\tolerance=2000
-\hbadness=2000
-\usepackage[small]{titlesec}
 
-\input{../helpers/mnsymbol.tex}
-\input{../helpers/fix-underbrace.tex}
-%\input{../helpers/revtex-12-fix.tex}
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
 %\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
 %\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
-\usepackage{latexsym}
-\usepackage{graphicx}
-\usepackage{epsf}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
-\usepackage{chngcntr} 
-\counterwithin{figure}{chapter} 
 
 \newcommand{\dessin}[4]
 {\begin{figure}[tp]\begin{center}
@@ -1487,8 +1508,8 @@ pair described by $\psi^{out}_p$ and $\psi^{out}_a$. Hence it is given by
 \label{jmatr}
 \end{equation}
 
-\newpage
-\dessin{.800}{NFIG1-2.eps}{F4}
+%\newpage
+\dessin{.700}{NFIG1-2.eps}{F4}
 {The real (fig. {\bf a}) and imaginary (fig. {\bf b}) parts of
 $J^{\psi}_0$ are plotted for a minimal wave packet 
 where we have taken $m/a = 9$. In the figure
