--- a/0909.1038/cernp.tex
+++ b/0909.1038/cernp.tex
@@ -864,9 +864,10 @@ S_{c_{n+1}}>\ln 2-\epsilon
 
 \b
 {\it Proof:}\quad To prove this look at the state (\ref{state}) and write it in the form
-\be
-|\Psi_{M,c}, \psi_b(t_{n+1})\rangle=\Big[|0\rangle_{c_{n+1}}|0\rangle_{b_{n+1}}\sqi(\Lambda^{(1)}+\Lambda^{(2)})\Big ]+ \Big [|1\rangle_{c_{n+1}} |1\rangle_{b_{n+1}}\sqi(\Lambda^{(1)}-\Lambda^{(2)})\Big ]
-\ee
+\begin{multline}
+|\Psi_{M,c}, \psi_b(t_{n+1})\rangle=\Big[|0\rangle_{c_{n+1}}|0\rangle_{b_{n+1}}\sqi(\Lambda^{(1)}+\\
+\Lambda^{(2)})\Big ]+ \Big [|1\rangle_{c_{n+1}} |1\rangle_{b_{n+1}}\sqi(\Lambda^{(1)}-\Lambda^{(2)})\Big ]
+\end{multline}
 The density matrix describing $c_{n+1}$ is
 \be
 \rho_{c_{n+1}}=\begin{pmatrix} \h\langle (\Lambda^{(1)}+\Lambda^{(2)})|(\Lambda^{(1)}+\Lambda^{(2)})\rangle & 
