--- a/1401.1523/firewall-precomputing.1.5-arxiv.tex
+++ b/1401.1523/firewall-precomputing.1.5-arxiv.tex
@@ -1,14 +1,60 @@
 % to cite: giddings 
-\documentclass[11pt,a4paper]{article}
+\documentclass[12pt,a4paper]{article}
 \pdfoutput=1
 \usepackage{jheppub}
-%\documentclass[superscriptaddress,11pt,jheppub]{article}
-\usepackage{amsmath,amssymb,latexsym,revsymb,color,hyperref}
+\usepackage{amsmath,amssymb,latexsym,revsymb,color}
 
 %\usepackage[pdftex]{graphicx}}. Again, if the evaporation is of the  \cite{bhlock,HaydenPreskill,sekino2008fast}
 %\pdfoutput=1
 \usepackage{amsthm}
 \input{definitions}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
+%\documentclass[superscriptaddress,11pt,jheppub]{article}
 
 \begin{document}
 \title{Firewalls and flat mirrors: An alternative to the AMPS experiment which evades the Harlow-Hayden obstacle}
@@ -21,6 +67,8 @@
 Finally, we prove that a black hole in thermal equilibrium with its own radiation, is uncorrelated with this radiation.}
 \date{\today}\footnote{the initial findings of this paper were originally communicated in January 2012, and a presentation of the results is available at http://online.kitp.ucsb.edu/online/fuzzorfire-m13/oppenheim/ (KITP, August 22, 2013)} 
 \maketitle
+
+\newpage
 
 \section{Is the AMPS experiment feasible?}
 
@@ -49,7 +97,7 @@ In the remainder of this section, we briefly review the Harlow-Hayden obstructio
  
 Returning now to the AMPS experiment, we denote the black hole by $H$ and the photons which have radiated away at early time, we denote by $R$. We denote by $B$, the late time photons which have evaporated into the zone. We are interested in the state of these three systems some time after the black hole has radiated away more than half its photons. I.e. we want to wait until the black hole as evaporated long enough, such that the late time Hawking radiation $R$ is maximally entangled with the black hole $H$ and the photons in the zone $B$. This is known as the Page time~\cite{page-unitary-evap} (see Figure \ref{fig:page}), and the total state of the system is given by
 \begin{align}
-\ket{\Psi}_{AMPS}=\frac{1}{\sqrt{|B||H|}}
+\ket{\Psi}_{\mathit{AMPS}}=\frac{1}{\sqrt{|B||H|}}
 =\sum_{h,b}\ket{b}_B\ket{h}_H U_R\ket{bh0}_{R}
 \label{eq:hh}
 \end{align}
@@ -62,7 +110,7 @@ where we include an additional register in the $\ket{0}$ state, because the stat
 If Alice can apply  $U^\dagger_R$ to the  Hawking radiation $R$ then she can succeed in distilling a pure entangled state 
 between some small subset $R_B$ of the early time Hawking radiation, and subsystem $B$.
 \begin{align}
-\id_{HB}\otimes U^\dagger_R\ket{\Psi}_{AMPS}= \frac{1}{\sqrt{|B|}}\sum_{b}\ket{b}_B\ket{b}_{R_B}\otimes\frac{1}{\sqrt{|H|}}\sum_{h}\ket{h}_H\ket{h}_{R_H}
+\id_{HB}\otimes U^\dagger_R\ket{\Psi}_{\mathit{AMPS}}= \frac{1}{\sqrt{|B|}}\sum_{b}\ket{b}_B\ket{b}_{R_B}\otimes\frac{1}{\sqrt{|H|}}\sum_{h}\ket{h}_H\ket{h}_{R_H}
 \end{align}
 In fact, she will have pairs of entangled bits on systems $B_1,B_2,...B_k$ each individually entangled with  $R_{B_1},R_{B_2},...R_{B_k}$. Here $B$ can be considered to be the near horizon radiation in the zone. However, as observed by Harlow and Hayden, the unitary $U_R$ is likely to be very complicated from a computational point of view, and it is almost certain that implementing it will take longer than the lifetime of the black hole. Alice will not have enough time before she must dive into the black hole to observe a violation of entanglement monogamy. The AMPS experiment does not appear feasible, even theoretically.
 
@@ -216,7 +264,7 @@ Instead of acting $U$ on one share of this maximally entangled state, one can eq
 under the action of $U_M^*\otimes U_B$.
 
 %(setting aside for the moment, the impossibility of acting on the internal states of a black hole), rather than acting $U^\dagger$ on $R$,
- %one could accomplish the same thing by acting $U^*$ on $BH$ since $\id_{BH}\otimes U^\dagger_R\ket{\Psi}_{AMPS}= U_{BH}^*\otimes\id_{R}\ket{\Psi}_{AMPS}$ as can be verified easily.
+ %one could accomplish the same thing by acting $U^*$ on $BH$ since $\id_{BH}\otimes U^\dagger_R\ket{\Psi}_{\mathit{AMPS}}= U_{BH}^*\otimes\id_{R}\ket{\Psi}_{\mathit{AMPS}}$ as can be verified easily.
  
 We now discuss a second protocol which requires creating a black hole in a box~\cite{hawking1976black,hawking1983thermodynamics}.  For this protocol,
 imagine then that we have 
