--- a/1810.09453/text.tex
+++ b/1810.09453/text.tex
@@ -11,6 +11,26 @@
 \usepackage[small]{caption}
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage{mathtools,xparse,MnSymbol}
+
+\usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
 \usepackage[colorlinks=true
 ,breaklinks=true
 ,urlcolor=blue
@@ -25,19 +45,19 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage[noBBpl,sc]{mathpazo}
-\linespread{1.05}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
-\tolerance=2000
-\hbadness=2000
 
-% these include amsmath and that can cause trouble in older docs.
-\input{../helpers/fix-underbrace.tex}
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
 
-\usepackage{mathtools,xparse,MnSymbol}
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
-
-\usepackage[small]{titlesec}
 
 %\usepackage[dotinlabels]{titletoc}
 %\titlelabel{{\thetitle}.\quad}
