--- a/1608.04948/TASI-AdSCFT-chapter.tex
+++ b/1608.04948/TASI-AdSCFT-chapter.tex
@@ -5,7 +5,27 @@
 \usepackage{relsize}
 \usepackage{alphalph}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.2in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
 \usepackage[colorlinks=true
+,breaklinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
 ,citecolor=blue
@@ -18,21 +38,19 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage{amssymb}
-\usepackage[T1]{fontenc}
-\usepackage{textcomp}
-\usepackage[altbullet]{lucidabr}
-\tolerance=2000
-\hbadness=2000
-\usepackage[small]{titlesec}
-%\usepackage[letterpaper, margin=1.2in]{geometry}
-\pagestyle{plain}
-% the lucida varphi is hideous
-\DeclareSymbolFont{greekletters}{OML}{zplm}{m}{it}
-\DeclareMathSymbol{\varphi}{\mathord}{greekletters}{"27}
 
-\input{../helpers/fix-underbrace.tex}
-\usepackage[papersize={6.5in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 
 %
 %
