--- a/1911.11977/draft.tex
+++ b/1911.11977/draft.tex
@@ -25,7 +25,7 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \sloppy
 
 % these include amsmath and that can cause trouble in older docs.
