--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,25 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-13 13:20:26 -0400 
+%% Created for Pete Su at 2023-08-14 21:50:46 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Natsuume2015,
+	author = {Makoto Natsuume},
+	date-added = {2023-08-14 21:50:19 -0400},
+	date-modified = {2023-08-14 21:50:46 -0400},
+	doi = {10.1007/978-4-431-55441-7},
+	note = {\href{https://arxiv.org/abs/1409.3575}{arxiv:1409.3575}},
+	publisher = {Springer Japan},
+	title = {{AdS}/{CFT} Duality User Guide},
+	url = {https://doi.org/10.1007%2F978-4-431-55441-7},
+	year = 2015,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-4-431-55441-7},
+	bdsk-url-2 = {https://doi.org/10.1007/978-4-431-55441-7}}
 
 @article{Natario2005,
 	archiveprefix = {arXiv},
