--- a/1409.3575/sgc_lnp_arxiv_v4.tex
+++ b/1409.3575/sgc_lnp_arxiv_v4.tex
@@ -87,9 +87,9 @@
 %\renewenvironment{subequations}{}{}
 
 %%%
-\usepackage[papersize={6in, 9.5in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={6in, 9.5in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
 \sloppy
-\input{../helpers/mnsymbol.tex}
+\input{../helpers/cmrsum.tex}
 
 \begin{document}
 
