--- a/0905.0932/HEEarXiv.tex
+++ b/0905.0932/HEEarXiv.tex
@@ -5,6 +5,25 @@
 %%%%%%%% HyperRef Package %%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\usepackage{amsmath,amsthm,amscd,amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.7in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
 \usepackage[colorlinks=true
 ,breaklinks=true
 ,urlcolor=blue
@@ -19,18 +38,9 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage[noBBpl,sc]{mathpazo}
-\linespread{1.05}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
-\tolerance=2000
-\hbadness=2000
 
-% these include amsmath and that can cause trouble in older docs.
-\input{../helpers/mnsymbol.tex}
-\input{../helpers/fix-underbrace.tex}
-
-\usepackage[small]{titlesec}
-\usepackage{cite}
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
 
 %\usepackage[dotinlabels]{titletoc}
 %\titlelabel{{\thetitle}.\quad}
@@ -39,6 +49,9 @@ bookmarksopenlevel=10
 %\input{../helpers/fix-revtex-12.tex}
 %\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
 %\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
+
 \renewcommand{\theequation}{\thesection.\arabic{equation}}
 \renewcommand{\baselinestretch}{1.1}
 \def\rishi{\rangle \! \rangle}
@@ -649,7 +662,8 @@ In the high temperature expansion, the result becomes (we set $L=1$)
 \!\!&=&\!\!
 \f{1}{3}\log\left[\f{\beta}{\pi
  a}\sinh\left(\f{\pi
-l}{\beta}\right)\right]+\f{1}{3}\sum_{m=1}^\infty
+l}{\beta}\right)\right] \no
+&&\quad +\f{1}{3}\sum_{m=1}^\infty
 \log\left[\f{(1-e^{2\pi \f{l}{\beta}}e^{-2\pi \f{m}{\beta}
 })(1-e^{-2\pi \f{l}{\beta}}e^{-2\pi \f{m}{\beta}})}{(1-e^{-2\pi
 \f{m}{\beta}})^2}\right]\no  &&\quad + 2\sum_{k=1}^\infty
@@ -775,11 +789,15 @@ complex conjugate one $\bar{\Psi}$ can be obtained by
 path-integrating from $t_{E}=\infty$ to $t_{E}=0$. To obtain the
 reduced density matrix $\rho_A$, we need to integrate $\phi_0$ on
 $B$ with the condition $\phi_{0}(x)=\phi'_0(x)$ when $x\in B$
-\be
+\begin{multline}
 [\rho_A]_{\phi_+ \phi_-}=(Z_{1})^{-1}\int
-^{t_E=\infty}_{t_{E}=-\infty} D\phi~ e^{-S(\phi)}\prod_{x\in
+^{t_E=\infty}_{t_{E}=-\infty} D\phi~ e^{-S(\phi)}\\
+\prod_{x\in
 A}\delta\left(\phi(+0,x)-\phi_+(x)\right)\cdot
-\delta\left(\phi(-0,x)-\phi_-(x)\right) \ , \label{pathrho}\ee where
+\delta\left(\phi(-0,x)-\phi_-(x)\right) \ , \label{pathrho}
+\end{multline}
+
+where
 $Z_1$ is the vacuum partition function on $\mathbb{R}^{2}$ and we
 multiply its inverse in order to normalize $\rho_A$ such that
 $\mathrm{tr}_A\,\rho_A=1$. This computation is sketched in Fig.\
@@ -1130,14 +1148,16 @@ recombination. Here we again
 meant $\gamma'_X$ is a surface which satisfies $\de \gamma'_X=\de X$.
 Since in general $\gamma'_X$s are not minimal area surface, we have Area$(\gamma'_X)\geq $Area$(\gamma_X)$.
 Therefore, as we can easily find from Fig.\ \ref{Fig:SSA}, this argument immediately leads to
-\ba
-&& \!\!\!\! \mbox{Area}(\gamma_{A+B})+\mbox{Area}(\gamma_{B+C})
-=\mbox{Area}(\gamma'_{B})+\mbox{Area}(\gamma'_{A+B+C})\geq
-\mbox{Area}(\gamma_{B})+\mbox{Area}(\gamma_{A+B+C}) \ , \no
-&& \!\!\!\! \mbox{Area}(\gamma_{A+B})+\mbox{Area}(\gamma_{B+C})
-=\mbox{Area}(\gamma'_{A})+\mbox{Area}(\gamma'_{C})\geq
+\begin{align}
+\mbox{Area}(\gamma_{A+B})+\mbox{Area}(\gamma_{B+C})
+&=\mbox{Area}(\gamma'_{B})+\mbox{Area}(\gamma'_{A+B+C})\no
+& \geq
+\mbox{Area}(\gamma_{B})\mbox{Area}(\gamma_{A+B+C})\no
+\mbox{Area}(\gamma_{A+B})+\mbox{Area}(\gamma_{B+C})
+&=\mbox{Area}(\gamma'_{A})+\mbox{Area}(\gamma'_{C})\no
+&\geq
 \mbox{Area}(\gamma_{A})+\mbox{Area}(\gamma_{C}) \ .
-\ea
+\end{align}
 In this way, we are able to check the strong subadditivity (\ref{Stronga}) and (\ref{Strongb}).
 Analogous inequalities have been discussed in \cite{Hirata:2008ms} for the holographic
 Wilson loops.
@@ -1244,7 +1264,7 @@ the dual CFT result (\ref{toth}) as shown in \cite{Azeyanagi:2007bj}.
 
 \begin{figure}
 \begin{center}
-\includegraphics[height=4.4cm,clip]{ads_blackhole.eps}
+\includegraphics[height=3.4cm,clip]{ads_blackhole.eps}
 \end{center}
 \caption{ \label{fig: ads_blackhole.eps} (a) Minimal surfaces
 $\gamma_A$ in the BTZ black hole for various sizes of $A$. (b)
@@ -2304,7 +2324,7 @@ the entanglement entropy in CFT. For recent discussions in this direction refer 
 
 \begin{figure}
 \begin{center}
-\includegraphics[height=9cm,clip]{covariant.eps}
+\includegraphics[height=6cm,clip]{covariant.eps}
 \end{center}
 \caption{ \label{bousso.eps} The setup of the Bousso bound applied to
 the AdS$_3$/CFT$_2$ in the Poincare coordinate
