--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-08-14 21:50:46 -0400 
+%% Created for Pete Su at 2023-08-14 21:59:29 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Nishioka2009,
+	author = {Tatsuma Nishioka and Shinsei Ryu and Tadashi Takayanagi},
+	date-added = {2023-08-14 21:59:25 -0400},
+	date-modified = {2023-08-14 21:59:27 -0400},
+	doi = {10.1088/1751-8113/42/50/504008},
+	journal = {J. Phys. A: Math. Theor.},
+	note = {\href{http://arxiv.org/abs/0905.0932v2}{arxiv:0905.0932v2}},
+	number = {50},
+	pages = {504008},
+	publisher = {{IOP} Publishing},
+	title = {Holographic entanglement entropy: an overview},
+	url = {https://doi.org/10.1088%2F1751-8113%2F42%2F50%2F504008},
+	volume = {42},
+	year = 2009,
+	bdsk-url-1 = {https://doi.org/10.1088%2F1751-8113%2F42%2F50%2F504008},
+	bdsk-url-2 = {https://doi.org/10.1088/1751-8113/42/50/504008}}
 
 @book{Natsuume2015,
 	author = {Makoto Natsuume},
