--- a/1812.07078/On_the_Universality_of_Hawking_Radiation.tex
+++ b/1812.07078/On_the_Universality_of_Hawking_Radiation.tex
@@ -11,10 +11,6 @@
 % one sided:
 \documentclass[12pt,english]{article}
 
-% paper size, margins, etc:
-\usepackage{geometry}
-\geometry{verbose,a4paper,tmargin=1in,bmargin=1in,lmargin=1in,rmargin=1in}
-
 \usepackage[titletoc,title]{appendix}
 
 % spacing
@@ -29,17 +25,7 @@
 \usepackage{sectsty}
 \allsectionsfont{\normalsize\raggedright\centering}
 
-% table of contents stuff
-\setcounter{tocdepth}{2}
-\usepackage[]{tocloft}
-\addtocontents{toc}{\cftpagenumbersoff{section}}
-\addtocontents{toc}{\cftpagenumbersoff{subsection}}
-\renewcommand{\cftsecfont}{\itshape}
-\renewcommand{\cftsubsecfont}{\itshape}
-\makeatletter
-\renewcommand{\@cftmaketoctitle}{}
-\makeatother
-\renewcommand{\cftdot}{}
+
 
 % footnotes
 %\usepackage[]{footmisc}
@@ -94,7 +80,7 @@
 % FONTS:
 %-------
 % for times roman fonts:
-\usepackage{txfonts}
+%\usepackage{txfonts}
 % recommended if output will have accented characters:
 \usepackage[T1]{fontenc}
 \usepackage{mathrsfs}
@@ -104,6 +90,52 @@
 % ----
 % Two-argument versions
 % Example: \pcitetbjps[p. 97]{hughes1997}
+
+\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.6in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 \newcommand{\citetbjps}[2][]{\ifthenelse{\equal{#1}{}}{\citeauthor{#2} ([\citeyear{#2}])}{\citeauthor{#2} ([\citeyear{#2}], #1)}}
 \newcommand{\citealtbjps}[2][]{\ifthenelse{\equal{#1}{}}{\citeauthor{#2} [\citeyear{#2}]}{\citeauthor{#2} [\citeyear{#2}], #1}}
 \newcommand{\citepbjps}[2][]{\ifthenelse{\equal{#1}{}}{(\citeauthor{#2} [\citeyear{#2}])}{(\citeauthor{#2} [\citeyear{#2}], #1)}}
@@ -125,7 +157,7 @@
 \begin{document}
 
 \title{{\Large \textbf{On the Universality of Hawking Radiation}}}
-\author{{\normalsize \textbf{Sean Gryb, Patricia Palacios, and Karim Th\'{e}bault}}\\\textit{\normalsize The British Journal for the Philosophy of Science} \normalsize (forthcoming) \\\normalsize\today}
+\author{{\normalsize {Sean Gryb, Patricia Palacios, and Karim Th\'{e}bault}}\\\textit{\normalsize The British Journal for the Philosophy of Science} \normalsize (forthcoming) \\\normalsize 9 Jul 2019 }
 
 \date{}
 
@@ -139,9 +171,9 @@
 A physically consistent semi-classical treatment of black holes requires universality arguments to deal with the `trans-Planckian' problem where quantum spacetime effects appear to be amplified such that they undermine the entire semi-classical modelling framework. We evaluate three families of such arguments in comparison with Wilsonian renormalization group universality arguments found in the context of condensed matter physics. Our analysis is framed by the crucial distinction between robustness and universality. Particular emphasis is placed on the quality whereby the various arguments are underpinned by `integrated' notions of robustness and universality.  Whereas the principal strength of Wilsonian universality arguments can be understood in terms of the presence of such integration, the principal weakness of all three universality arguments for Hawking radiation is its absence.
 \end{abstract}
 
-
+\newpage
 \tableofcontents
-
+\newpage
 
 \section{Introduction}
 
